fix: Update z-index values in tailwind config and CSS

--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -45,7 +45,7 @@
   }
   
   #mainSidebar.translate-x-0 {
-    @apply z-999;
+    z-index: 999;
   }
 }
 
